--- a/automatic_scouting/growjo.ipynb
+++ b/automatic_scouting/growjo.ipynb
@@ -46,9 +46,9 @@
     "\n",
     "\n",
     "# Your Airtable API key and base ID\n",
-    "api_key_airtable = 'patRHlt60PBL6jlV5.f2b9afed49bf23d9ab73cee6b283af76d3b4a9ebc0619002c6f104cc84382f2c'\n",
-    "base_id = 'appUMz37tbS84AKX4'\n",
-    "table_name = 'integrated_table'\n",
+    "api_key_airtable = ''\n",
+    "base_id = ''\n",
+    "table_name = ''\n",
     "\n",
     "# Base URL\n",
     "base_url2 = \"https://growjo.com/\"\n",
@@ -63,7 +63,7 @@
     "}\n",
     "\n",
     "# Your OpenAI API key\n",
-    "openai.api_key = 'sk-64WRLuCUEs3SIYhuZa-yqWYNk_8DiAmRDLpeoW_pCvT3BlbkFJqnbKe2BxJyFAf70ErxSBVx79EkkxW4ZxnXaq0UpekA'\n",
+    "openai.api_key = ''\n",
     "\n",
     "# Configura il logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
